src/frontend/src/components/search/search.less
.search {
  background-color: @s2-verydarkblue;
  height: auto;
  min-height: 100vh;
  max-height: 1000vh;
  transition: all 0.4s ease-in;

  &:after {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
  }

  .heading {
    position: absolute;
    display: inline-block;
    top: @4xl-stack;
    left: 50%;
    transform: translateX(-50%);
    transition: all .4s ease-in;
    transition-delay: .2s;

    .title {
      color: @s2-red;
      line-height: 1em;
      transition: all .4s ease-in;
      transition-delay: .2s;
    }

    .subtitle {
      color: @s2-white;
      margin-top: 0.5em;
      transition: all .2s ease-in;
      user-select: none;
    }

  }

  .container {
    padding-top: @6xl-stack;
    padding-bottom: @4xl-stack;
    transition: all .4s ease-in;
    transition-delay: .2s;
  }
  
  @media (min-width: @tablet-portrait-up) {
    .results-loaded & {
      min-height: 430px;
      max-height: 100vh;
      
      .container {
        padding-top: @xl-stack;
        padding-bottom: @5xl-stack;
      }
      
      .heading {
        top: 20px;
        
        .title {
          font-weight: 400;
          font-size: @s-title-font-size;
          animation-name: titleAnimation;
          animation-duration: .8s;
          animation-delay: .2s;
          animation-timing-function: ease-in;
          will-change: font-size, transform;
        }
        
        .subtitle {
          opacity: 0;
          font-size: @l-base-font-size;
        }
      }
    }
  }
}

@keyframes titleAnimation {
  0% {
    transform: scale(1);
  }
  60% {
    transform: scale(1);
  }
  80% {
    transform: scale(0.85);
  }
  90% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.searchbar {
  margin-top: @4xl-stack;
  padding-bottom: @xl-stack;
  padding-top: @l-stack;
  text-align: center;

  .search-container {
    display: flex;
    position: relative;

    .input-container {
      display: flex;
      flex-wrap: wrap;
      width: 100%;
      border-radius: 0;
      border-bottom: @base-border;
      padding-right: 60px;
      float: left;
      
      .profile & {
        border-bottom: @base-border-grey;
      }

      input {
        padding: @m-stack 0 @m-stack 0;
        box-sizing: content-box;
        background-color: transparent;
        flex: 2 1 auto;
        border: none;
        border-radius: 0;
        color: @s2-white;
        z-index: 4;
        
        .profile & {
          color: @s2-black;
        }

        &::placeholder {
          color: white;
          transition: color 0.1s ease-in;
          
          .profile & {
            color: @s2-grey2;
          }
        }

        &:focus::placeholder {
          color: @s2-border-color;
          
          .profile & {
            color: @s2-black;
          }
        }

        &:focus {
          outline: none;
          -webkit-appearance: none;
        }

        &::-webkit-search-decoration,
        &::-webkit-search-cancel-button {
          -webkit-appearance: none;
        }
      }

      .search-term {
        display: inline-block;
        position: relative;
        border: 1px solid rgba(255,255,255, 0.5);
        color: @s2-white;
        padding: @s-stack;
        padding-right: @xl-inline;
        margin: @xs-inline @s-inline @xs-inline 0;
        line-height: @base-font-size;
        
        
        &:hover {

          a {
            transition: opacity 0.1s ease-in;
            opacity: 0.8;
          }
        }

        a {
          position: absolute;
          right: 2px;
          bottom: 6px;
          display: block;
          overflow: hidden;
          width: 12px;
          height: 10px;
          margin-left: @s-inline;
          cursor: pointer;
          text-indent: -9999px;
          opacity: 1;
          border: 10px solid transparent;
          background-image: data-uri("@{image-path}/x.svg");
          background-repeat: no-repeat;
          background-position: right center;

          &:hover {
            transition: none;
            opacity: 0.7;
          }
        }
        
        .profile & {
          filter: invert(1);
        }
      }
    }

    button {
      position: absolute;
      bottom: @xs-stack;
      right: 0;
      z-index: 5;
      width: 5%;
      max-width: 21px;
      min-height: 42px;
      margin-left: 5px;
      margin-right: @m-stack;
      background-color: transparent;
      border: none;
      cursor: pointer;
      opacity: 1;

      &.submit-search-button {
        background-image: data-uri("@{image-path}/icon-search.svg");
        background-repeat: no-repeat;
        background-position-x: 50%;
        background-position-y: 50%;
        background-size: contain;
      }

      &:hover {
          opacity: 0.75;
      }

      &:focus {
        outline: none;
      }
      
      .profile & {
        filter: invert(1);
      }
    }
  }

  .dropdown {
    min-width: 140px;
    margin-bottom: @xl-stack;
  }

  .info-text {
    display: inline-block;
    margin-top: @xl-stack;
    font-size: @xs-title-font-size;
    line-height: (@xs-title-font-size * 2);
    font-weight: 300;

    @media (min-width: @tablet-portrait-up) {
      font-size: @xs-title-font-size;
      line-height: (@xs-title-font-size * 2);
      margin-top: @3xl-stack;
      width: 90%;
    }
  }

  .search-description {
    padding: @s-stack 0 @m-stack 0;
    text-align: center;
    margin-bottom: @l-stack;
  }
}

